src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Approved_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows users to approve suppliers</description>
        <inlineHelpText>Allows users to approve suppliers</inlineHelpText>
        <label>Approved Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auditor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Authority_Level_2__c</fullName>
        <description>This is a SFDC Created field for testing.</description>
        <label>Authority Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authority_Level__c</fullName>
        <label>Authority Level</label>
        <picklist>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_Close_Opps__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is not ticked, a validation rule prevents the user from closing an opportunity</description>
        <inlineHelpText>If this is not ticked, a validation rule prevents the user from closing an opportunity</inlineHelpText>
        <label>Can Close Opps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Can_Close_Tangible_Goods__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick to allow a user to close ONLY opportunities with a record type of Tangible Goods</description>
        <inlineHelpText>Tick to allow a user to close ONLY opportunities with a record type of Tangible Goods</inlineHelpText>
        <label>Can Close Tangible Goods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dimension_1__c</fullName>
        <description>This is the users reporting code to determine for dimension 1 (users budgets)</description>
        <inlineHelpText>This is the users reporting code to determine for dimension 1 (users budgets)</inlineHelpText>
        <label>Dimension 1</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Env__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Can the Trainer deliver Environmental services</inlineHelpText>
        <label>Env</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Operations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to facilitate the management of bsc special events</description>
        <inlineHelpText>Tick if user will manage BSC events</inlineHelpText>
        <label>Event Operations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Opp_Approval_Processes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Excludes the user from the Opportunity Approval processes so that they can (eg) set their own discounted pricing without the need to apply for approval.</description>
        <inlineHelpText>Excludes the user from the Opportunity Approval processes so that they can (eg) set their own discounted pricing without the need to apply for approval.</inlineHelpText>
        <label>Exclude from Opp Approval Processes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Trainer / Auditor a full time employee?</inlineHelpText>
        <label>FT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Get_PO_T_C_Liability_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Get PO Transfer/Cancellation Liability Warning</description>
        <inlineHelpText>Get Purchase Order Transfer/Cancellation Liability Warning</inlineHelpText>
        <label>Get PO T&amp;C Liability Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Health_and_Safety_Qualifications__c</fullName>
        <label>Health and Safety Qualifications</label>
        <picklist>
            <picklistValues>
                <fullName>DipOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CertOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DipSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEBOSH Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEBOSH National General Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEBOSH National Construction Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEBOSH National Fire Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NVQ in H&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Graduate Diploma in H&amp;S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSc in H&amp;S</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IOSH__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the trainer IOSH registered?</inlineHelpText>
        <label>IOSH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industries in which this individual is able to take courses. Note this needs to sync with the Industry field on the account</description>
        <inlineHelpText>Select the Industries in which the trainer is able to take courses.</inlineHelpText>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>01:Agriculture, Forestry, &amp; Fishing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02:Mining &amp; Quarrying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03:Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04:Manufacturing &amp; Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05:Pharma &amp; Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06:Energy &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07:Transport &amp; Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08:Building, Construction, &amp; Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09:Retail &amp; Wholesale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:Professional, Financial, &amp; Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:Hotels &amp; Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13:Public Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14:Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15:Health &amp; Caregiving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16:Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>International_Trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if a trainer / auditor is able to take courses outside the UK</description>
        <inlineHelpText>Is the trainer / auditor able to take courses outside the UK?</inlineHelpText>
        <label>Int</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Auditor_Qualification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Auditor Qualification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__LOOPlus_Tester__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will allow this user to run LOOPlus on a staging environment when testing is available. When enabled, the LOOPlus page will take slightly longer to load.</inlineHelpText>
        <label>DDP Tester</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__dsPassword__c</fullName>
        <label>DocuSign Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__dsToken__c</fullName>
        <label>DocuSign API UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manage_Opportunity_Closure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Validation Rules on the Opportunity check this field, if it is checked, the user is able to modify Opportunity Close Date and re-open an opportunity</description>
        <inlineHelpText>Validation Rules on the Opportunity check this field, if it is checked, the user is able to modify Opportunity Close Date and re-open an opportunity</inlineHelpText>
        <label>Manage Opportunity Closure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager2__c</fullName>
        <description>Manager&apos;s Manager</description>
        <label>Manager2</label>
        <relationshipName>Manager2</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Manager3__c</fullName>
        <description>Manager&apos;s Manager&apos;s manager</description>
        <label>Manager3</label>
        <relationshipName>Manager3</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>NEBOSH__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the Trainer NEBOSH Registered?</inlineHelpText>
        <label>NEBOSH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PK_CB_USER_ID__c</fullName>
        <defaultValue>&quot;ERROR&quot;</defaultValue>
        <description>This field is populated with data from STUSER.USER_ID for each User in Salesforce. It is set as an external ID to allow cross-object lookups to Users during Data Migrations to set record ownership.

There is a workflow rule to ensure that this field is populated for all User records created</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a System Administrator Field. It cannot be edited unless you are a System Adminstrator</inlineHelpText>
        <label>PK_CB_USER_ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PK_CB_USER_LOGIN_ID__c</fullName>
        <description>This field is populated with data from STUSER.USER_ID for each User in Salesforce. It is set as an external ID to allow cross-object lookups to Users during Data Migrations to set record ownership.

There is a workflow rule to ensure that this field is populated for all User records created</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a System Administrator Field. It cannot be edited unless you are a System Adminstrator</inlineHelpText>
        <label>PK_CB_USER_LOGIN_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Choice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User is able to choose to whom their POs should be submitted</description>
        <inlineHelpText>If checked, the User is able to choose to whom their POs should be submitted</inlineHelpText>
        <label>PO Choice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualifications__c</fullName>
        <description>Used for scheduling trainer</description>
        <label>Professional Status</label>
        <picklist>
            <picklistValues>
                <fullName>CFIOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMIOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GradIOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TechIOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIOSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEnv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not use.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>The trainer&apos;s home region</description>
        <inlineHelpText>Select the trainer&apos;s home region</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Greater London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Midlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scotland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <inlineHelpText>Use to allocate Account Managers to Sales Teams - for reporting</inlineHelpText>
        <label>Sales Team</label>
        <picklist>
            <picklistValues>
                <fullName>KAM/BDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hammersmith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birmingham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-House Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Assign_Permitted__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Task Assign Permitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer_Name__c</fullName>
        <description>For Calendar views only - Trainers</description>
        <inlineHelpText>For Calendar views only - Trainers</inlineHelpText>
        <label>Trainer Name</label>
        <picklist>
            <picklistValues>
                <fullName>Adrian Burns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adrian Harper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adrian Vale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alan Astbury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alan Capstick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alastair Barrett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alex Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Ashford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andrew Oliver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Tilleard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anna Schwartz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avril Bairstow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev McCordall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bob Wallace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Gallacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Rudge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Trew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bryan McCracken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris McDermott</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craig Lydiate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyril Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daniel Kenning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dan Lee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danny Cochrane</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Chase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Robertson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Burrage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Haigh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Hayes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>David Parr</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Qualifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Qualifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__APILicenseKey__c</fullName>
        <label>API License Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SupportDataAccessKey__c</fullName>
        <label>Support Data Access Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingAnonWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingAnonWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingBestBets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingBestBets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingEmailActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingEmailActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingGroupedWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingGroupedWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingInterestingMomentsList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingInterestingMomentsList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingScoringList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingScoringList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingStreamList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingStreamList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWatchList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWatchList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__IsCachingWebActivityList__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCachingWebActivityList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Sales_Insight_Counter__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Marketo Sales Insight Welcome Counter</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>natterbox__Natterbox_Password__c</fullName>
        <label>Natterbox Password</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>natterbox__Natterbox_Username__c</fullName>
        <externalId>true</externalId>
        <label>Natterbox Username</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>Active_Salesforce_licenced_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Salesforce licenced users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Manager2__c</columns>
        <columns>Manager3__c</columns>
        <columns>Authority_Level_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>All_ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>Manager2__c</columns>
        <columns>Manager3__c</columns>
        <columns>Authority_Level_2__c</columns>
        <columns>Event_Operations__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Users</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Users_Non_Partner</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>Manager2__c</columns>
        <columns>Manager3__c</columns>
        <columns>Authority_Level_2__c</columns>
        <columns>Event_Operations__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notEqual</operation>
            <value>PO User Only</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Chatter</value>
        </filters>
        <label>All Active Users (Non-Partner)</label>
    </listViews>
    <listViews>
        <fullName>All_InActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Manager2__c</columns>
        <columns>Manager3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All InActive Users</label>
    </listViews>
    <listViews>
        <fullName>All_Partner_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FT__c</columns>
        <columns>Trainer__c</columns>
        <columns>Auditor__c</columns>
        <columns>Env__c</columns>
        <columns>International_Trainer__c</columns>
        <columns>NEBOSH__c</columns>
        <columns>IOSH__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.IS_PARTNER</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Partner Users</label>
    </listViews>
    <listViews>
        <fullName>Financial_Force_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Financial</value>
        </filters>
        <label>Financial Force Users</label>
    </listViews>
    <listViews>
        <fullName>Individual_User_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>startsWith</operation>
            <value>john</value>
        </filters>
        <label>Individual User View</label>
    </listViews>
    <listViews>
        <fullName>Read_Only_Financial</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>c2g__APILicenseKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BSC Operations,BSC Operations Manager,BSC Customer Services</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>BSC International Sales User,BSC Sales Manager,BSC Sales User,BSC Subscriptions</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Read Only FF Users</label>
    </listViews>
    <listViews>
        <fullName>SpecificUser</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>MANAGER</columns>
        <columns>Manager2__c</columns>
        <columns>Manager3__c</columns>
        <columns>LOCALE</columns>
        <columns>LANGUAGE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FULL_NAME</field>
            <operation>contains</operation>
            <value>Neil</value>
        </filters>
        <label>SpecificUser</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ISBLANK_PK_CB_Username</fullName>
        <active>false</active>
        <description>Validates that a value exists for the externalID User.PK_CB_Username which is equal to User.Username.</description>
        <errorConditionFormula>AND(  
ISBLANK( PK_CB_USER_ID__c ) = False ,
PK_CB_USER_ID__c = Username)</errorConditionFormula>
        <errorDisplayField>PK_CB_USER_ID__c</errorDisplayField>
        <errorMessage>You must have a value in the field User.PK_CB_Username in order to save a User record. The value in User.PK_CB_Username must equal the value in User.Username. Please update the value in this field before saving this record.</errorMessage>
    </validationRules>
</CustomObject>